--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -60,12 +60,12 @@ const { activeNav } = Astro.props;
         <ul id="menu-items" class="display-none sm:flex">
           <li>
             <a href="/posts" class={activeNav === "posts" ? "active" : ""}>
-              Posts
+              posts
             </a>
           </li>
           <li>
             <a href="/tags" class={activeNav === "tags" ? "active" : ""}>
-              Tags
+              tags
             </a>
           </li>
           <li>
@@ -75,7 +75,7 @@ const { activeNav } = Astro.props;
           </li>
           <li>
             <a href="/about" class={activeNav === "about" ? "active" : ""}>
-              About
+              about
             </a>
           </li>
           <li>
@@ -85,7 +85,7 @@ const { activeNav } = Astro.props;
                 activeNav === "search" ? "active" : ""
               }`}
               ariaLabel="search"
-              title="Search"
+              title="search"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
