--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -21,9 +21,9 @@ const prev = pageNum > 1 ? "" : "disabled";
 const next = pageNum < totalPages ? "" : "disabled";
 ---
 
-<Layout title={`Posts | ${SITE.title}`}>
+<Layout title={`posts | ${SITE.title}`}>
   <Header activeNav="posts" />
-  <Main pageTitle="Posts" pageDesc="All the articles I've posted.">
+  <Main pageTitle="posts" pageDesc="all the notes I've ever posted.">
     <ul>
       {
         posts.map(({ data }) => (
