--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -13,9 +13,9 @@ const posts = await getCollection("blog");
 let tags = getUniqueTags(posts);
 ---
 
-<Layout title={`Tags | ${SITE.title}`}>
+<Layout title={`tags | ${SITE.title}`}>
   <Header activeNav="tags" />
-  <Main pageTitle="Tags" pageDesc="All the tags used in posts.">
+  <Main pageTitle="tags" pageDesc="all the tags">
     <ul>
       {tags.map(tag => <Tag name={tag} size="lg" />)}
     </ul>
