--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -1,5 +1,5 @@
 ---
-import { getCollection } from "astro:content";
+import { CollectionEntry, getCollection } from "astro:content";
 import { SITE } from "@config";
 import Layout from "@layouts/Layout.astro";
 import Main from "@layouts/Main.astro";
@@ -8,10 +8,10 @@ import Footer from "@components/Footer.astro";
 import Search from "@components/Search";
 
 // Retrieve all articles
-const posts = await getCollection("blog", ({ data }) => !data.draft);
-const tils = await getCollection("til", ({data}) => !data.draft);
+const posts : CollectionEntry<"blog">[] = await getCollection("blog", ({ data }) => !data.draft);
+const tils : CollectionEntry<"til">[] = await getCollection("til", ({data}) => !data.draft);
 
-const transform = ({ data }) => ({
+const transform = ( { data } : CollectionEntry<"blog"> | CollectionEntry<"til">) => ({
   title: data.title,
   description: data.description,
   data
