--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,7 @@
 ---
-import { LOGO_IMAGE, SITE } from "@config";
+import { SITE } from "@config";
 import Hr from "./Hr.astro";
 import LinkButton from "./LinkButton.astro";
-
-import logoPNG from "/assets/logo.png";
-import logoSVG from "/assets/logo.svg";
 
 export interface Props {
   activeNav?: "posts" | "tags" | "about" | "search" | "til";
@@ -18,18 +15,7 @@ const { activeNav } = Astro.props;
   <div class="nav-container">
     <div class="top-nav-wrap">
       <a href="/" class="logo">
-        {
-          LOGO_IMAGE.enable ? (
-            <img
-              src={LOGO_IMAGE.svg ? logoSVG : logoPNG}
-              alt="AstroPaper Logo"
-              width={LOGO_IMAGE.width}
-              height={LOGO_IMAGE.height}
-            />
-          ) : (
-            SITE.title
-          )
-        }
+        { SITE.title }
       </a>
       <nav id="nav-menu">
         <button
@@ -69,9 +55,7 @@ const { activeNav } = Astro.props;
             </a>
           </li>
           <li>
-            <a href="/til" class={activeNav === "til" ? "active" : ""}>
-              TIL
-            </a>
+            <a href="/til" class={activeNav === "til" ? "active" : ""}> TIL</a>
           </li>
           <li>
             <a href="/about" class={activeNav === "about" ? "active" : ""}>
