--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,8 +13,7 @@ const { noMarginTop = false } = Astro.props;
   <Hr noPadding />
   <div class="footer-wrapper">
     <Socials centered />
-    <div class="copyright-wrapper">
-    </div>
+    <div class="copyright-wrapper"></div>
   </div>
 </footer>
 
