--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -8,20 +8,28 @@ import Footer from "@components/Footer.astro";
 import Search from "@components/Search";
 
 // Retrieve all articles
-const posts : CollectionEntry<"blog">[] = await getCollection("blog", ({ data }) => !data.draft);
-const tils : CollectionEntry<"til">[] = await getCollection("til", ({data}) => !data.draft);
+const posts: CollectionEntry<"blog">[] = await getCollection(
+  "blog",
+  ({ data }) => !data.draft
+);
+const tils: CollectionEntry<"til">[] = await getCollection(
+  "til",
+  ({ data }) => !data.draft
+);
 
-const transform = ( { data } : CollectionEntry<"blog"> | CollectionEntry<"til">) => ({
+const transform = ({
+  data,
+}: CollectionEntry<"blog"> | CollectionEntry<"til">) => ({
   title: data.title,
   description: data.description,
-  data
+  data,
 });
 
 // List of items to search in
 const postList = posts.map(transform);
-const tilList = tils.map(transform)
+const tilList = tils.map(transform);
 
-const searchList = tilList.concat(postList)
+const searchList = tilList.concat(postList);
 ---
 
 <Layout title={`search | ${SITE.title}`}>
