--- a/src/pages/til/[slug].astro
+++ b/src/pages/til/[slug].astro
@@ -3,6 +3,7 @@ import { CollectionEntry, getCollection } from "astro:content";
 import slugify from "@utils/slugify";
 import getPageNumbers from "@utils/getPageNumbers";
 import TILDetails from "@layouts/TILDetails.astro";
+import TIL from "@layouts/TIL.astro";
 
 export interface Props {
   til: CollectionEntry<"til">;
@@ -23,7 +24,8 @@ export async function getStaticPaths() {
   return [...tilResult, ...pagePaths];
 }
 
+const tils = await getCollection("til");
 const { til } = Astro.props;
 ---
 
-<TILDetails til={til} />
+{til ? <TILDetails til={til} /> : <TIL tils={tils} />}
