--- a/src/layouts/TILDetails.astro
+++ b/src/layouts/TILDetails.astro
@@ -29,7 +29,7 @@ const { Content } = await til.render();
         ><path
           d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
         ></path>
-      </svg><span>Go back</span>
+      </svg><span>go back</span>
     </button>
   </div>
   <main id="main-content">
