--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -7,7 +7,7 @@ import Footer from "@components/Footer.astro";
 import Card from "@components/Card";
 import getUniqueTags from "@utils/getUniqueTags";
 import getPostsByTag from "@utils/getPostsByTag";
-import slugify from "@utils/slugify";
+import getPostLink from "@utils/getPostLink";
 import { SITE } from "@config";
 import getSortedPosts from "@utils/getSortedPosts";
 
@@ -51,10 +51,7 @@ const sortTagsPost = getSortedPosts(filteredContent);
     <ul>
       {
         sortTagsPost.map(post => (
-          <Card
-            href={`/${post?.collection || "posts"}/${slugify(post?.data)}`}
-            frontmatter={post?.data}
-          />
+          <Card href={getPostLink(post)} frontmatter={post?.data} />
         ))
       }
     </ul>
