--- a/src/pages/books/index.astro
+++ b/src/pages/books/index.astro
@@ -2,7 +2,7 @@
 import { getCollection } from "astro:content";
 import Bookshelf from "@layouts/Bookshelf.astro";
 
-const books = await getCollection("book", ({ data }) => !data.draft)
+const books = await getCollection("book", ({ data }) => !data.draft);
 ---
 
 <Bookshelf books={books} />
