--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,9 +9,9 @@ import Card from "@components/Card";
 import getSortedPosts from "@utils/getSortedPosts";
 import slugify from "@utils/slugify";
 
-const posts = await getCollection("blog");
+const posts = await getCollection("blog", ({ data }) => !data.draft);
 const sortedPosts = getSortedPosts(posts);
-const featuredPosts = sortedPosts.filter(({ data }) => data.featured);
+const featuredPosts = sortedPosts.filter(({ data }) => data?.featured);
 ---
 
 <Layout>
