--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -29,7 +29,7 @@ export async function getStaticPaths() {
 const { slug } = Astro.params;
 const { post } = Astro.props;
 
-const posts = await getCollection("blog");
+const posts = await getCollection("blog", ({ data }) => !data.draft);
 
 const sortedPosts = getSortedPosts(posts);
 
